--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,95 +1,119 @@
-/* Body Settings (Background, Font, default text colour) */
-body {
-    background: #383838;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-/* End of Body Settings (Background, Font, default text colour) */
-
-/* Global list properties */
-ul {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
+/*body, html {
+    margin:0;
 }
 
-ul li {
-    float: left;
-    width: 630px;
+.content {
+    padding:30px;
+}
+
+.nav-main {
+    width:100%;
+    background-color: #40C7EB;
+    height: 70px;
+    color:#fff;
+
+}
+
+.nav-main .logo {
+    float:left;
+    height:40px;
+    padding: 15px 30px;
+    font-size: 1.4em;
+    line-height:40px;
+   
+}
+
+.nav-main > ul {
+    margin:0;
+    padding:0;
+    float:left;
+    list-style-type: none;
+}
+
+.nav-main > ul > li {
+    float:left;
+}
+
+.nav-item {
+    display:inline-block;
+    padding:15px 20px;
     height: 40px;
-    background-color:#69ccf0;
-    opacity: .8;
     line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    margin-right: 3px;
-    border: 1px white;
-}
-
-ul li a {
+    color:white;
     text-decoration: none;
-    color: black;
-    display: block;
 }
 
-ul li a:hover {
-    background-color: #5d9afc;
-}
-/* End of global list properties */
-
-
-/* Move Right Header */
-
-#MainHeader:hover {
-    text-decoration: underline;
+.nav-item:hover {
+    background-color: #39accc;
 }
 
-#MainHeader:focus {
-    background-color: azure;
+.nav-content {
+    position: absolute;
+    top: 70px;
+    overflow:hidden;
+    background-color: #40C7EB;
+    max-height:0;
 }
 
-#MainHeader #SubHeader  {
-    display: inline-block;
+.nav-content a {
+    color:#fff;
+    text-decoration: none;
 }
 
-#SubHeader {
-    display: none;
+.nav-content a:hover {
+    text-decoration:underline;
 }
 
-#SubHeaderHeader {
-    display: none;
+.nav-sub {
+    padding: 20px;
 }
 
-/*#SubHeader:hover #SubHeaderHeader {
-    display: block;
-    float: left;
-    margin-left: 100%;
-    clear: left; */
-}
-/*End of Move Right Header */
-
-
-/* Move Left Header */
-
-#MainHeaderLeft:hover {
-    text-decoration: underline;
+.nav-sub ul {
+    padding:0;
+    margin:0;
+    list-style-type: none;
 }
 
-#MainHeaderLeft:hover #SubHeaderLeft  {
-    display: block;
+.nav-sub ul li a {
+    display:inline-block;
+    padding:5px 0;
 }
 
-#SubHeaderLeft {
-    display: none;
+.nav-item:focus {
+    background-color: #39accc;
 }
 
-#SubHeaderHeaderLeft {
-    display: none;
+.nav-item:focus ~ .nav-content {
+    max-height: 400px;
+    -webkit-transition: max-height 0.2s ease-in;
+    -moz-transition: max-height 0.2s ease-in;
+}*/
+
+
+html {
+    background-color:#555
 }
 
-#SubHeaderLeft:hover #SubHeaderHeaderLeft {
-    display: block;
-    float: right;
-    margin-right: 100%;
+.float-right{
+    position: absolute;
+    right: 200px;
+    top: 5px;
+    z-index: 1;
 }
-/* End of Move Left Header */
+
+.nav-item{
+    width: calc(30vw - 200px);
+}
+
+.active{
+    background-color: rgb(233,236,239) !important;
+    border: 0px !important;
+}
+
+.nav-link{
+    border: 0px !important;
+}
+
+.navbar{
+    padding-bottom: 0;
+}
