--- a/css/mains.css
+++ b/css/mains.css
@@ -17,6 +17,7 @@ html  {
 .nav-tabs .nav-link.active{
     border-bottom: 3px solid transparent;
     background-color: #40C7EB;
+    border-bottom: 3px solid white;
 }
 
 .float-right{
@@ -43,7 +44,7 @@ html  {
     border-bottom: 3px solid white;
 }
 
-.active{
+.active {
     border: 0px !important;
     border-bottom: 3px solid black;
 }
@@ -66,4 +67,8 @@ html  {
     padding:5px;
 }
 
+.btn-outline-success {
+    color:white;
+    border-color:white
+}
 
