--- a/css/mains.css
+++ b/css/mains.css
@@ -17,7 +17,7 @@ html  {
 .nav-tabs .nav-link.active{
     border-bottom: 3px solid transparent;
     background-color: #40C7EB;
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid white !important;;
 }
 
 .float-right{
