--- a/css/mains.css
+++ b/css/mains.css
@@ -14,14 +14,16 @@ html  {
 .lead {
     color: white
 }
-.nav-tabs .nav-link.active{
-    border-bottom: 3px solid transparent;
+
+
+.nav-item .nav-link.active {
     background-color: #40C7EB;
+    border-bottom: 3px solid transparent;
     border-bottom: 3px solid white !important; 
 }
 
-.nav-item:hover { 
-    border-bottom: 3px solid white;
+.nav-item .nav-link:hover { 
+    border-bottom: 3px solid white !important;
 }
 
 .float-right{
